# ut-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.trae/documents/: UT-Agent 全面增强开发计划 (TDD方式).md  UT-Agent 完整开发计划 (TDD方式).md  UT-Agent 对标业界领先的改进计划.md  UT-Agent 持续改进计划.md  UT-Agent 持续迭代优化计划.md  UT-Agent 架构重构计划 (TDD方式).md  UT-Agent 详细开发计划.md  UT-Agent高级功能开发计划.md  (+17 more)
ci-templates/: README.md
docs/: api.md  cache_system.md  optimization_summary.md  plugin_system.md
jetbrains-plugin/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
tests/: test_adaptive_cache.py  test_adaptive_thread_pool.py  test_agent_executor.py  test_agents_base.py  test_assertion_quality.py  test_ast_cache.py  test_ast_cache_secure.py  test_async_llm_caller.py  test_async_parallel_processor.py  test_azure_openai_provider.py  test_base_test_generator.py  test_batch_processor.py  test_bedrock_provider.py  test_ci.py  test_claude_provider.py  test_code_analyzer.py  test_code_analyzer_refactored.py  test_config.py  test_container.py  test_coverage_analyzer.py  test_cross_file_analyzer.py  test_cs_analyzer.py  test_cs_test_generator.py  test_distributed_executor.py  test_enhanced_cache.py  test_error_handler.py  test_event_bus.py  test_fixer_agent.py  test_gemini_provider.py  test_generator_agent.py  test_git_analyzer.py  test_github_actions.py  test_gitlab_ci.py  test_go_analyzer.py  test_go_test_generator.py  test_graph_graph.py  test_graph_nodes.py  test_html_generator.py  test_interactive_editor.py  test_jetbrains_plugin.py  (+45 more)
vscode-extension/: CHANGELOG.md  README.md  package.json
(+142 files in other folders)
